<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ObjectAnimator Example</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">About</string>
    <string name="nwanvu">nwanvu</string>
    <string name="author">AUTHOR</string>
    <string name="source">SOURCE</string>
    <string name="source_url">https://github.com/nwanvu/ObjectAnimator-Example</string>
    <string name="explore">EXPLORE</string>
    <string name="m1_text_1">TITLE PAGE 1!</string>
    <string name="m1_text_2">TITLE PAGE 2!</string>
    <string name="m1_text_3">TITLE PAGE 3!</string>
    <string name="m1_text_4">TITLE PAGE 4!</string>
    <string name="m2_text_1">Content here content here content here content here content here content here content here!</string>

</resources>
